@@ -59,6 +59,9 @@ Version 0.6
 - better `__repr__` and `__str__` of
   :exception:`werkzeug.exceptions.HTTPException`
 - test client works correctly with multiple cookies now.
+- the :class:`werkzeug.routing.Map` now has a class attribute with
+  the default converter mapping.  This helps subclasses to override
+  the converters without passing them to the constructor.
 
 Version 0.5.1
 -------------
